--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Website</h2>
+    <hr>
+    <h1>Website Page</h1>
+    <b>This is my first website page.</b>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> 
+        Praesent vitae orci eu risus bibendum suscipit. Fusce vel nisl vitae <strong>ipsum commodo ultricies blandit eu nisl.</strong> 
+        Aenean dictum id odio id pretium. Nunc facilisis congue elit. <i>Praesent eu neque dapibus, placerat magna at, tincidunt ligula.</i> 
+        Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget dignissim justo, eget congue augue. 
+        Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
+
+        <ol>
+            <li>abc</li>
+            <li>def</li>
+            <li>ghi</li>
+            <li>jkl</li>
+            <li>mno</li>
+            <li>pqr</li>
+            <li>stu</li>
+            <li>vwx</li>
+            <li>yz</li>
+        </ol>
+
+        
+        <ul>
+            <li>abc</li>
+            <li>def</li>
+            <li>ghi</li>
+            <li>jkl</li>
+            <li>mno</li>
+            <li>pqr</li>
+            <li>stu</li>
+            <li>vwx</li>
+            <li>yz</li>
+        </ul>
 </body>
 </html>
