--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <hr>
     <h1>Website Page</h1>
+    <h2>Website Page</h2>
+    <h3>Website Page</h3>
     <b>This is my first website page.</b>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> 
         Praesent vitae orci eu risus bibendum suscipit. Fusce vel nisl vitae <strong>ipsum commodo ultricies blandit eu nisl.</strong> 
@@ -15,6 +17,8 @@
         Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget dignissim justo, eget congue augue. 
         Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
 
+    <img src="coffee.jpeg"><p>Coffee</p>
+    <a href="https://www.starbucks.com.tr/">Starbucks</a>
         <ol>
             <li>abc</li>
             <li>def</li>
