--- a/index.html
+++ b/index.html
@@ -1,47 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <hr>
     <h1>Website Page</h1>
     <h2>Website Page</h2>
     <h3>Website Page</h3>
     <b>This is my first website page.</b>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> 
-        Praesent vitae orci eu risus bibendum suscipit. Fusce vel nisl vitae <strong>ipsum commodo ultricies blandit eu nisl.</strong> 
-        Aenean dictum id odio id pretium. Nunc facilisis congue elit. <i>Praesent eu neque dapibus, placerat magna at, tincidunt ligula.</i> 
-        Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget dignissim justo, eget congue augue. 
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+        Praesent vitae orci eu risus bibendum suscipit. Fusce vel nisl vitae <strong>ipsum commodo ultricies blandit eu
+            nisl.</strong>
+        Aenean dictum id odio id pretium. Nunc facilisis congue elit. <i>Praesent eu neque dapibus, placerat magna at,
+            tincidunt ligula.</i>
+        Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget
+        dignissim justo, eget congue augue.
         Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
 
-    <img src="coffee.jpeg"><p>Coffee</p>
+    <img src="coffee.jpeg">
+    <p>Coffee</p>
     <a href="https://www.starbucks.com.tr/">Starbucks</a>
-        <ol>
-            <li>abc</li>
-            <li>def</li>
-            <li>ghi</li>
-            <li>jkl</li>
-            <li>mno</li>
-            <li>pqr</li>
-            <li>stu</li>
-            <li>vwx</li>
-            <li>yz</li>
-        </ol>
+    <ol>
+        <li>abc</li>
+        <li>def</li>
+        <li>ghi</li>
+        <li>jkl</li>
+        <li>mno</li>
+        <li>pqr</li>
+        <li>stu</li>
+        <li>vwx</li>
+        <li>yz</li>
+    </ol>
 
-        
-        <ul>
-            <li>abc</li>
-            <li>def</li>
-            <li>ghi</li>
-            <li>jkl</li>
-            <li>mno</li>
-            <li>pqr</li>
-            <li>stu</li>
-            <li>vwx</li>
-            <li>yz</li>
-        </ul>
+
+    <ul>
+        <li>abc</li>
+        <li>def</li>
+        <li>ghi</li>
+        <li>jkl</li>
+        <li>mno</li>
+        <li>pqr</li>
+        <li>stu</li>
+        <li>vwx</li>
+        <li>yz</li>
+    </ul>
 </body>
+
 </html>
