--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
 <body>
     <hr>
-    <h1>Website Page</h1>
+    <h1>COFFEE SHOP</h1>
+    <hr>
+    <!--
+
+    
     <h2>Website Page</h2>
     <h3>Website Page</h3>
     <b>This is my first website page.</b>
@@ -21,34 +25,42 @@
         Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget
         dignissim justo, eget congue augue.
         Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
+-->
+    <img src="coffee1.jpg" width="1366" height="800" alt="coffe-pic">
+    <hr>
+    <h2><i>Coffee Preparation</i></h2>
+    <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
+        with the type of coffee and with the raw materials, <b>the process includes four basic steps: </b><i>raw coffee
+            beans must be roasted, the roasted coffee beans must then be ground, and the ground coffee must then be
+            mixed with hot or cold water (depending on the method of brewing) for a specific time (brewed), the liquid
+            coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
+        is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
+        or toppings (such as shaved chocolate).</p>
+    <!--
+        <a href="https://www.starbucks.com.tr/">Starbucks</a>-->
+    <h3>Types of Hot Coffee</h3>
+    <ul type="square">
+        <li>Espresso</li>
+        <li>Double Espresso</li>
+        <li><em><b>Macchiato</b></em></li>
+        <li><b>Mocha</b></li>
+        <li><small>Cappuccino</small></li>
+        <li>Flat White</li>
+        <li>Cafe Latte</li>
+    </ul>
 
-    <img src="coffee.jpeg">
-    <p>Coffee</p>
-    <a href="https://www.starbucks.com.tr/">Starbucks</a>
-    <ol>
-        <li>abc</li>
-        <li>def</li>
-        <li>ghi</li>
-        <li>jkl</li>
-        <li>mno</li>
-        <li>pqr</li>
-        <li>stu</li>
-        <li>vwx</li>
-        <li>yz</li>
+    <h3>Types of Cold Coffee</h3>
+    <ol type="I">
+        <li>Cold Brew</li>
+        <li>Iced Espresso</li>
+        <li>Iced Americano</li>
+        <li><i>Iced Mocha</i></li>
+        <li><small>Iced Latte</small></li>
+        <li><del>Iced Macciahto</del><ins> Iced Macchiato</ins></li>
+        <li><mark>Frappe</mark></li>
+        <li><em>Dalgona</em></li>
     </ol>
 
-
-    <ul>
-        <li>abc</li>
-        <li>def</li>
-        <li>ghi</li>
-        <li>jkl</li>
-        <li>mno</li>
-        <li>pqr</li>
-        <li>stu</li>
-        <li>vwx</li>
-        <li>yz</li>
-    </ul>
 </body>
 
 </html>
