--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
         <li><em>Dalgona</em></li>
     </ol>
 
+    <table>
+        <thead>
+            <tr>
+                <th>Coffee Name</td>
+                <th>Count</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mocha</td>
+                <td>11</td>
+            </tr>
+            <tr>
+                <td>Latte</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>Americano</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>Espresso</td>
+                <td>12</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 
 </html>
