--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <li><em>Dalgona</em></li>
     </ol>
 
-    <table>
+    <table width ="20%" border="2" cellpadding="5" cellspacing="5">
         <thead>
             <tr>
-                <th>Coffee Name</td>
-                <th>Count</td>
+                <th>Coffee Name</th>
+                <th>Count</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody align="center">
             <tr>
                 <td>Mocha</td>
                 <td>11</td>
@@ -86,7 +86,15 @@
                 <td>12</td>
             </tr>
         </tbody>
+        <tfoot align="center">
+            <tr>
+                <th>Sum</th>
+                <td>37</td>
+            </tr>
+
+        </tfoot>
     </table>
+
 
 </body>
 
