--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         dignissim justo, eget congue augue.
         Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
 -->
-    <img src="coffee1.jpg" width="1366" height="800" alt="coffe-pic">
+    <img src="coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
     <hr>
     <h2><i>Coffee Preparation</i></h2>
     <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
