--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <p><a href="https://github.com/Gulsahbb" target="_blank" rel="noopener" title="Github Account">GITHUB</a></p>
     <p><a href="mailto:gulsahbaskurt.10@gmail.com" title="gmail address">SEND MAIL</a></p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis interdum euismod. Morbi tincidunt eget
+    <p><pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis interdum euismod.Morbi tincidunt eget
     mauris vel gravida. Vestibulum imperdiet risus non euismod vestibulum. In hac habitasse platea dictumst. Cras
     pretium lobortis neque, nec vulputate nisi maximus sit amet. In fermentum metus ac vestibulum ultrices. Donec ex
     nisi, dignissim vel augue non, pellentesque lacinia lacus. Nam id metus maximus, dapibus odio vel, malesuada dui.
-    Donec vitae rhoncus justo. Cras congue nisi est, euismod euismod elit hendrerit sed. Aenean viverra porta fringilla.</p>
+    Donec vitae rhoncus justo. Cras congue nisi est, euismod euismod elit hendrerit sed. Aenean viverra porta fringilla.</pre></p>
 
     <p>Mauris volutpat urna et accumsan efficitur. Praesent euismod justo est, eu rhoncus magna tempus a. Quisque placerat
     faucibus diam, ut tincidunt mi vehicula vel. Vivamus sit amet mauris eu nulla rutrum egestas quis nec quam. Cras eu
@@ -139,6 +139,10 @@
     sapien vulputate gravida. Morbi vitae nunc nibh. Nunc ornare leo justo, sit amet consequat tortor suscipit a. In hac
     habitasse platea dictumst.</p>
     <p><a href="#">Go to the top of the page.</a></p>
+
+    <address>
+        4192 Goosetown Drive, Mars Hill, NC, North Carolina,28754
+    </address>
 </body>
 
 </html>
