--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
     rhoncus. Cras placerat neque ac sapien pulvinar, id consectetur arcu interdum.</p>
 
     <p>Nullam pharetra lorem augue, ut mattis ex mattis id. Nunc vel suscipit ligula. Maecenas viverra libero eget finibus
-    aliquet. Mauris a nisi tellus. Etiam egestas consectetur sagittis. Donec eget libero eu magna egestas laoreet.
+    aliquet. Mauris a nisi tellus.<mark> Etiam egestas consectetur sagittis. Donec eget libero eu magna egestas laoreet.
     Integer molestie, erat a blandit interdum, tellus justo faucibus elit, non molestie metus nulla in nibh. Lorem ipsum
-    dolor sit amet, consectetur adipiscing elit. Nunc condimentum massa sed mauris pharetra porttitor. Nullam nisl
+    dolor sit amet, consectetur adipiscing elit. Nunc condimentum massa sed mauris pharetra porttitor.</mark> Nullam nisl
     lacus, suscipit id arcu vel, eleifend malesuada mi. Nunc porta, lacus at iaculis euismod, arcu purus consequat
     velit, non fringilla orci orci eu turpis.</p>
 
     <p>Nulla diam ligula, dignissim ut placerat in, mollis ac purus. Quisque elementum scelerisque nunc, ut tincidunt mi
     pellentesque quis. Suspendisse nec ligula id tellus tincidunt vestibulum quis non nulla. Fusce euismod, mauris ac
     facilisis suscipit, sem quam fermentum velit, non lacinia est tortor vel neque. Nam eu condimentum sapien, at
-    lacinia lectus. Praesent at metus a quam sodales vehicula. Nam eleifend interdum libero ut congue. Duis hendrerit
-    libero at tortor laoreet aliquet. Etiam erat dolor, iaculis in ex ut, convallis maximus augue. Cras malesuada
+    lacinia lectus. Praesent at metus a quam sodales vehicula. <del>Nam eleifend interdum libero ut congue. Duis hendrerit
+    libero at tortor laoreet aliquet.</del> Etiam erat dolor, iaculis in ex ut, convallis maximus augue. Cras malesuada
     commodo ullamcorper. Nunc lobortis magna nec justo pulvinar, in pellentesque nibh mollis.</p>
 
     <p>Nulla sollicitudin iaculis odio, eget semper justo fermentum nec. Donec non sem quis massa interdum convallis sit
@@ -143,6 +143,8 @@
     <address>
         4192 Goosetown Drive, Mars Hill, NC, North Carolina,28754
     </address>
+
+    <cite>https://github.com/Gulsahbb</cite> all rights reserved.
 </body>
 
 </html>
