--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
     eget dapibus tortor sodales. <blockquote>molestie lectus eget nunc ultricies, sit amet pellentesque purus dignissim. Morbi
     scelerisque dui ac velit convallis, ac porta risus finibus. Aenean vel tincidunt nibh, sit amet dignissim ligula.</blockquote> 
     Vivamus sed pretium leo. Vivamus mauris massa, pretium quis condimentum eget, lacinia vel magna. Aliquam erat
-    volutpat. Etiam pulvinar nibh condimentum, condimentum mauris non, pharetra dolor. Maecenas sollicitudin mauris eu
-    sapien vulputate gravida. Morbi vitae nunc nibh. Nunc ornare leo justo, sit amet consequat tortor suscipit a. In hac
+    volutpat. Etiam pulvinar nibh condimentum, <q>condimentum mauris non, pharetra dolor. Maecenas sollicitudin mauris eu
+    sapien vulputate gravida.</q> Morbi vitae nunc nibh. Nunc ornare leo justo, sit amet consequat tortor suscipit a. In hac
     habitasse platea dictumst.</p>
     <p><a href="#">Go to the top of the page.</a></p>
 
@@ -144,7 +144,19 @@
         4192 Goosetown Drive, Mars Hill, NC, North Carolina,28754
     </address>
 
-    <cite>https://github.com/Gulsahbb</cite> all rights reserved.
+    <cite>https://github.com/Gulsahbb</cite> all rights reserved.<br>
+
+    <meter value="8.0"></meter>
+    <progress value="8.0"></progress>
+    <p><samp>Not Found 404</samp></p>
+    <p>Welcome to <span>Coffee Shop!</span></p>
+    <p><var>Welcome to Coffee Shop!</var></p>
+    <p>This is a <sup>web</sup><sub>site</sub></p>
+
+
+
+
+    <hr>
 </body>
 
 </html>
