--- a/index.html
+++ b/index.html
@@ -153,7 +153,12 @@
     <p><var>Welcome to Coffee Shop!</var></p>
     <p>This is a <sup>web</sup><sub>site</sub></p>
 
-
+    <form name="form1" id="form1" method="get" action="#">
+        <input id="text" name="name"><br>
+        <input id="text" name="surname"><br>
+        <input id="text" name="message"><br>
+        <input type="submit" value="SEND">
+    </form>
 
 
     <hr>
