--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
     <p>Welcome to <span>Coffee Shop!</span></p>
     <p><var>Welcome to Coffee Shop!</var></p>
     <p>This is a <sup>web</sup><sub>site</sub></p>
-
+    <hr>
+    <h3>FORM PAGE</h3>
     <form name="form1" id="form1" method="post" action="#">
         <p>USERNAME : <input id="text" name="kullaniciadi" id="k-adi" placeholder="Username" maxlength="6"
                 onclick="alert('Hello Javascript!')"></p>
@@ -182,12 +183,17 @@
         <p><input type="tel" placeholder="tel"></p>
         <p><input type="search" placeholder="search"></p>
         <p><textarea name="message" id="message" cols="33" rows="8" placeholder="Message"></textarea></p>
-        <p><label><input type="checkbox" value="M" name="chck1">Male</label>
-            <label><input type="checkbox" value="F" name="chck2">Female</label>
+        <p><label><input type="checkbox" value="M" name="chck">Male</label>
+            <label><input type="checkbox" value="F" name="chck">Female</label>
         </p>
-        <p><label><input type="radio" value="M" name="chck1">Male</label>
-            <label><input type="radio" value="F" name="chck2">Female</label>
+        <p><label><input type="radio" value="M" name="chck">Male</label>
+            <label><input type="radio" value="F" name="chck">Female</label>
         </p>
+        <p><select name="" id="">
+            <option>HTML</option>
+            <option>CSS</option>
+            <option>Javascript</option>
+        </select></p>
         <input type="submit" value="Send">
         <input type="button" value="Button">
         <input type="reset">
