--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>COFFEE SHOP</title>
 </head>
 
 <body>
     <hr>
     <h1>COFFEE SHOP</h1>
-    <hr>
-    <!--
-
     
+    <div class="menu">
+        <ul type=" ">
+        <li><a href="menu.html">MENU</a></li>
+        <li><a href="specials.html">SPECIALS</a></li>
+        <li><a href="aboutus.html">ABOUT US</a></li>
+        <li><a href="contact.html">CONTACT</a></li>           
+        </ul>
+    </div>
+
+    <img src="images/coffee-shop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
+    
+    <!--
     <h2>Website Page</h2>
     <h3>Website Page</h3>
     <b>This is my first website page.</b>
@@ -25,7 +34,7 @@
         Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget
         dignissim justo, eget congue augue.
         Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
--->
+
     <img src="coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
     <hr>
     <h2><i>Coffee Preparation</i></h2>
@@ -36,8 +45,8 @@
             coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
         is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
         or toppings (such as shaved chocolate).</p>
-    <!--
-        <a href="https://www.starbucks.com.tr/">Starbucks</a>-->
+
+        <a href="https://www.starbucks.com.tr/">Starbucks</a>
     <h3>Types of Hot Coffee</h3>
     <ul type="square">
         <li>Espresso</li>
@@ -189,7 +198,7 @@
         <p><label><input type="radio" value="M" name="chck">Male</label>
             <label><input type="radio" value="F" name="chck">Female</label>
         </p>
-        <p><select name="" id="">
+        <p><select name="selectt" id="slct1">
             <option>HTML</option>
             <option>CSS</option>
             <option>Javascript</option>
@@ -199,7 +208,7 @@
         <input type="reset">
     </form>
 
-
+-->
     <hr>
 </body>
 
