--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
 
-    <img src="images/coffee-shop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
+    <img src="coffee-shop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
     
     <!--
     <h2>Website Page</h2>
