--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>COFFEE SHOP</h1>
     
     <div class="menu">
-        <ul type=" ">
+        <ul>
         <li><a href="menu.html">MENU</a></li>
         <li><a href="specials.html">SPECIALS</a></li>
         <li><a href="aboutus.html">ABOUT US</a></li>
@@ -20,195 +20,8 @@
         </ul>
     </div>
 
-    <img src="coffee-shop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
-    
-    <!--
-    <h2>Website Page</h2>
-    <h3>Website Page</h3>
-    <b>This is my first website page.</b>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-        Praesent vitae orci eu risus bibendum suscipit. Fusce vel nisl vitae <strong>ipsum commodo ultricies blandit eu
-            nisl.</strong>
-        Aenean dictum id odio id pretium. Nunc facilisis congue elit. <i>Praesent eu neque dapibus, placerat magna at,
-            tincidunt ligula.</i>
-        Phasellus et purus dolor. Phasellus fermentum ultricies ex in dapibus. <em>Duis non porta orci. </em>Sed eget
-        dignissim justo, eget congue augue.
-        Phasellus ut arcu ultrices, efficitur nisi eget, vestibulum diam.</p>
+    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
 
-    <img src="coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
-    <hr>
-    <h2><i>Coffee Preparation</i></h2>
-    <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
-        with the type of coffee and with the raw materials, <b>the process includes four basic steps: </b><i>raw coffee
-            beans must be roasted, the roasted coffee beans must then be ground, and the ground coffee must then be
-            mixed with hot or cold water (depending on the method of brewing) for a specific time (brewed), the liquid
-            coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
-        is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
-        or toppings (such as shaved chocolate).</p>
-
-        <a href="https://www.starbucks.com.tr/">Starbucks</a>
-    <h3>Types of Hot Coffee</h3>
-    <ul type="square">
-        <li>Espresso</li>
-        <li>Double Espresso</li>
-        <li><em><b>Macchiato</b></em></li>
-        <li><b>Mocha</b></li>
-        <li><small>Cappuccino</small></li>
-        <li>Flat White</li>
-        <li>Cafe Latte</li>
-    </ul>
-
-    <h3>Types of Cold Coffee</h3>
-    <ol type="I">
-        <li>Cold Brew</li>
-        <li>Iced Espresso</li>
-        <li>Iced Americano</li>
-        <li><i>Iced Mocha</i></li>
-        <li><small>Iced Latte</small></li>
-        <li><del>Iced Macciahto</del><ins> Iced Macchiato</ins></li>
-        <li><mark>Frappe</mark></li>
-        <li><em>Dalgona</em></li>
-    </ol>
-
-    <table width="20%" border="2" cellpadding="5" cellspacing="5">
-        <thead>
-            <tr>
-                <th>Coffee Name</th>
-                <th>Count</th>
-            </tr>
-        </thead>
-        <tbody align="center">
-            <tr>
-                <td>Mocha</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Latte</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>Americano</td>
-                <td>9</td>
-            </tr>
-            <tr>
-                <td>Espresso</td>
-                <td>12</td>
-            </tr>
-        </tbody>
-        <tfoot align="center">
-            <tr>
-                <th>Sum</th>
-                <td>37</td>
-            </tr>
-
-        </tfoot>
-    </table>
-    <p><a href="https://github.com/Gulsahbb" target="_blank" rel="noopener" title="Github Account">GITHUB</a></p>
-    <p><a href="mailto:gulsahbaskurt.10@gmail.com" title="gmail address">SEND MAIL</a></p>
-
-    <p>
-    <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis interdum euismod.Morbi tincidunt eget
-    mauris vel gravida. Vestibulum imperdiet risus non euismod vestibulum. In hac habitasse platea dictumst. Cras
-    pretium lobortis neque, nec vulputate nisi maximus sit amet. In fermentum metus ac vestibulum ultrices. Donec ex
-    nisi, dignissim vel augue non, pellentesque lacinia lacus. Nam id metus maximus, dapibus odio vel, malesuada dui.
-    Donec vitae rhoncus justo. Cras congue nisi est, euismod euismod elit hendrerit sed. Aenean viverra porta fringilla.</pre>
-    </p>
-
-    <p>Mauris volutpat urna et accumsan efficitur. Praesent euismod justo est, eu rhoncus magna tempus a. Quisque
-        placerat
-        faucibus diam, ut tincidunt mi vehicula vel. Vivamus sit amet mauris eu nulla rutrum egestas quis nec quam. Cras
-        eu
-        nunc ac tortor molestie luctus in pulvinar nunc. Vestibulum pretium quam sed libero ullamcorper vulputate. Cras
-        mauris ante, pellentesque in ultricies ut, tempus nec orci. Pellentesque id lectus pharetra, varius turpis non,
-        egestas lectus. In placerat lectus non pretium sagittis. Morbi eu elementum ipsum. Sed id libero at sapien
-        tincidunt
-        rhoncus. Cras placerat neque ac sapien pulvinar, id consectetur arcu interdum.</p>
-
-    <p>Nullam pharetra lorem augue, ut mattis ex mattis id. Nunc vel suscipit ligula. Maecenas viverra libero eget
-        finibus
-        aliquet. Mauris a nisi tellus.<mark> Etiam egestas consectetur sagittis. Donec eget libero eu magna egestas
-            laoreet.
-            Integer molestie, erat a blandit interdum, tellus justo faucibus elit, non molestie metus nulla in nibh.
-            Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit. Nunc condimentum massa sed mauris pharetra porttitor.</mark>
-        Nullam nisl
-        lacus, suscipit id arcu vel, eleifend malesuada mi. Nunc porta, lacus at iaculis euismod, arcu purus consequat
-        velit, non fringilla orci orci eu turpis.</p>
-
-    <p>Nulla diam ligula, dignissim ut placerat in, mollis ac purus. Quisque elementum scelerisque nunc, ut tincidunt mi
-        pellentesque quis. Suspendisse nec ligula id tellus tincidunt vestibulum quis non nulla. Fusce euismod, mauris
-        ac
-        facilisis suscipit, sem quam fermentum velit, non lacinia est tortor vel neque. Nam eu condimentum sapien, at
-        lacinia lectus. Praesent at metus a quam sodales vehicula. <del>Nam eleifend interdum libero ut congue. Duis
-            hendrerit
-            libero at tortor laoreet aliquet.</del> Etiam erat dolor, iaculis in ex ut, convallis maximus augue. Cras
-        malesuada
-        commodo ullamcorper. Nunc lobortis magna nec justo pulvinar, in pellentesque nibh mollis.</p>
-
-    <p>Nulla sollicitudin iaculis odio, eget semper justo fermentum nec. Donec non sem quis massa interdum convallis sit
-        amet eu tellus. Morbi a venenatis augue, quis ultricies augue. Vivamus eu massa vel orci maximus luctus. Nullam
-        pellentesque est ipsum, sed rhoncus metus varius quis. Fusce tempor erat tempus varius tincidunt. Curabitur vel
-        leo
-        felis. Praesent venenatis tortor nec eros volutpat, in lacinia sem rutrum. Donec sagittis iaculis congue. Sed
-        fermentum malesuada ornare.</p>
-
-    <p>Ut placerat venenatis quam ac tristique. Donec est sapien, mollis ac urna et, luctus accumsan ligula. Lorem ipsum
-        dolor sit amet, consectetur adipiscing elit. Quisque non maximus ante. Vivamus pellentesque elit et lacus
-        euismod,
-        eget dapibus tortor sodales.
-    <blockquote>molestie lectus eget nunc ultricies, sit amet pellentesque purus dignissim. Morbi
-        scelerisque dui ac velit convallis, ac porta risus finibus. Aenean vel tincidunt nibh, sit amet dignissim
-        ligula.</blockquote>
-    Vivamus sed pretium leo. Vivamus mauris massa, pretium quis condimentum eget, lacinia vel magna. Aliquam erat
-    volutpat. Etiam pulvinar nibh condimentum, <q>condimentum mauris non, pharetra dolor. Maecenas sollicitudin mauris
-        eu
-        sapien vulputate gravida.</q> Morbi vitae nunc nibh. Nunc ornare leo justo, sit amet consequat tortor suscipit
-    a. In hac
-    habitasse platea dictumst.</p>
-    <p><a href="#">Go to the top of the page.</a></p>
-
-    <address>
-        4192 Goosetown Drive, Mars Hill, NC, North Carolina,28754
-    </address>
-
-    <cite>https://github.com/Gulsahbb</cite> all rights reserved.<br>
-
-    <meter value="8.0"></meter>
-    <progress value="8.0"></progress>
-    <p><samp>Not Found 404</samp></p>
-    <p>Welcome to <span>Coffee Shop!</span></p>
-    <p><var>Welcome to Coffee Shop!</var></p>
-    <p>This is a <sup>web</sup><sub>site</sub></p>
-    <hr>
-    <h3>FORM PAGE</h3>
-    <form name="form1" id="form1" method="post" action="#">
-        <p>USERNAME : <input id="text" name="kullaniciadi" id="k-adi" placeholder="Username" maxlength="6"
-                onclick="alert('Hello Javascript!')"></p>
-        <p>PASSWORD : <input type="password" name="sifre" id="pass" placeholder="Password" autocomplete="off"
-                maxlength="10"></p>
-        <p>EMAIL : <input type="email" name="email" id="email" placeholder="Email"></p>
-        <p><input type="hidden" value="asdfasdf"></p>
-        <p><input type="url" placeholder="url"></p>
-        <p><input type="tel" placeholder="tel"></p>
-        <p><input type="search" placeholder="search"></p>
-        <p><textarea name="message" id="message" cols="33" rows="8" placeholder="Message"></textarea></p>
-        <p><label><input type="checkbox" value="M" name="chck">Male</label>
-            <label><input type="checkbox" value="F" name="chck">Female</label>
-        </p>
-        <p><label><input type="radio" value="M" name="chck">Male</label>
-            <label><input type="radio" value="F" name="chck">Female</label>
-        </p>
-        <p><select name="selectt" id="slct1">
-            <option>HTML</option>
-            <option>CSS</option>
-            <option>Javascript</option>
-        </select></p>
-        <input type="submit" value="Send">
-        <input type="button" value="Button">
-        <input type="reset">
-    </form>
-
--->
     <hr>
 </body>
 
