--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,62 @@
     <title>MENU</title>
 </head>
 <body>
-    
+    <h3>Types of Hot Coffee</h3>
+    <ul type="square">
+        <li>Espresso</li>
+        <li>Double Espresso</li>
+        <li><em><b>Macchiato</b></em></li>
+        <li><b>Mocha</b></li>
+        <li><small>Cappuccino</small></li>
+        <li>Flat White</li>
+        <li>Cafe Latte</li>
+    </ul>
+
+    <h3>Types of Cold Coffee</h3>
+    <ol type="I">
+        <li>Cold Brew</li>
+        <li>Iced Espresso</li>
+        <li>Iced Americano</li>
+        <li><i>Iced Mocha</i></li>
+        <li><small>Iced Latte</small></li>
+        <li><del>Iced Macciahto</del><ins> Iced Macchiato</ins></li>
+        <li><mark>Frappe</mark></li>
+        <li><em>Dalgona</em></li>
+    </ol>
+
+    <table width="20%" border="2" cellpadding="5" cellspacing="5">
+        <thead>
+            <tr>
+                <th>Coffee Name</th>
+                <th>Count</th>
+            </tr>
+        </thead>
+        <tbody align="center">
+            <tr>
+                <td>Mocha</td>
+                <td>11</td>
+            </tr>
+            <tr>
+                <td>Latte</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>Americano</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>Espresso</td>
+                <td>12</td>
+            </tr>
+        </tbody>
+        <tfoot align="center">
+            <tr>
+                <th>Sum</th>
+                <td>37</td>
+            </tr>
+
+        </tfoot>
+    </table>
+
 </body>
 </html>
