--- a/specials.html
+++ b/specials.html
@@ -6,6 +6,18 @@
     <title>SPECIALS</title>
 </head>
 <body>
-    
+    <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
+    <hr>
+    <h2><i>Coffee Preparation</i></h2>
+    <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
+        with the type of coffee and with the raw materials, <b>the process includes four basic steps: </b><i>raw coffee
+            beans must be roasted, the roasted coffee beans must then be ground, and the ground coffee must then be
+            mixed with hot or cold water (depending on the method of brewing) for a specific time (brewed), the liquid
+            coffee extraction must be separated from the used grounds</i>, and finally, if desired, the extracted coffee
+        is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
+        or toppings (such as shaved chocolate).</p>
+
+        <a href="https://www.starbucks.com.tr/">Starbucks</a>
+
 </body>
 </html>
