--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COFFEE SHOP</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <hr>
     <h1>COFFEE SHOP</h1>
-    
+
     <div class="menu">
         <ul>
-        <li><a href="menu.html">MENU</a></li>
-        <li><a href="specials.html">SPECIALS</a></li>
-        <li><a href="aboutus.html">ABOUT US</a></li>
-        <li><a href="contact.html">CONTACT</a></li>           
+            <li><a href="index.html">HOME PAGE</a></li>
+            <li><a href="menu.html">MENU</a></li>
+            <li><a href="specials.html">SPECIALS</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </div>
-
-    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic"  width="1366" height="800" >
-
     <hr>
+    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic" width="1366" height="800">
 </body>
 
 </html>
