--- a/menu.html
+++ b/menu.html
@@ -1,14 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MENU</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h3>Types of Hot Coffee</h3>
-    <ul type="square">
+
+    <h1>MENU</h1>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">HOME PAGE</a></li>
+            <li><a href="menu.html">MENU</a></li>
+            <li><a href="specials.html">SPECIALS</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </div>
+    <hr>
+    <h4>Types of Hot Coffee</h4>
+    <ul id="hotc" type="square">
         <li>Espresso</li>
         <li>Double Espresso</li>
         <li><em><b>Macchiato</b></em></li>
@@ -18,8 +32,8 @@
         <li>Cafe Latte</li>
     </ul>
 
-    <h3>Types of Cold Coffee</h3>
-    <ol type="I">
+    <h4>Types of Cold Coffee</h4>
+    <ol id="coldc" type="I">
         <li>Cold Brew</li>
         <li>Iced Espresso</li>
         <li>Iced Americano</li>
@@ -65,4 +79,5 @@
     </table>
 
 </body>
+
 </html>
