--- a/specials.html
+++ b/specials.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPECIALS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
+
+    <h1>SPECIALS</h1>
+    <div class="menu">
+        <ul>
+            <li><a href="index.html">HOME PAGE</a></li>
+            <li><a href="menu.html">MENU</a></li>
+            <li><a href="specials.html">SPECIALS</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </div>
     <hr>
+    <img src="images/coffee1.jpg" width="1366" height="800" alt="coffe-pic" title="Coffee" border="2">
     <h2><i>Coffee Preparation</i></h2>
     <p>Coffee preparation is the process of turning coffee beans into liquid coffee. While the particular steps vary
         with the type of coffee and with the raw materials, <b>the process includes four basic steps: </b><i>raw coffee
@@ -17,7 +31,8 @@
         is combined with other elements of the desired beverage, such as sweeteners, dairy products, dairy alternatives,
         or toppings (such as shaved chocolate).</p>
 
-        <a href="https://www.starbucks.com.tr/">Starbucks</a>
+    <a href="https://www.starbucks.com.tr/">Starbucks</a>
 
 </body>
+
 </html>
