--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>COFFEE SHOP</h1>
+    <!--  <h1>COFFEE SHOP</h1>
 
     <div class="menu">
         <ul>
@@ -21,7 +21,33 @@
         </ul>
     </div>
     <hr>
-    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic" width="1366" height="800">
+    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic" width="1366" height="800"> <img src="images/logo.PNG" alt="logo" width="200" height="120">-->
+
+    <header>
+        <div class="header">
+            <nav class="navbar">
+                <div class="logo">
+                    <p><a href="index.html">COFFEE SHOP</a></p>
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html">HOME PAGE</a></li>
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="specials.html">SPECIALS</a></li>
+                    <li><a href="aboutus.html">ABOUT US</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <div id="banner">
+        <img src="images/coffeeshop.jpg" alt="banner" width="1366" height="800">
+    </div>
+<!--
+    <footer>
+        <p>Gulsahbb ~ <cite>all rights reserved.</cite></p>
+    </footer>
+-->
 </body>
 
 </html>
