--- a/index.html
+++ b/index.html
@@ -9,25 +9,14 @@
 </head>
 
 <body>
-    <!--  <h1>COFFEE SHOP</h1>
-
-    <div class="menu">
-        <ul>
-            <li><a href="index.html">HOME PAGE</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li><a href="specials.html">SPECIALS</a></li>
-            <li><a href="aboutus.html">ABOUT US</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
-    <hr>
-    <img src="images/coffeeshop.jpg" alt="coffe-shop-pic" width="1366" height="800"> <img src="images/logo.PNG" alt="logo" width="200" height="120">-->
-
     <header>
         <div class="header">
             <nav class="navbar">
                 <div class="logo">
-                    <p><a href="index.html">COFFEE SHOP</a></p>
+                    <!--<p><a href="index.html">COFFEE SHOP</a></p>-->
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
+                    <img src="images/bttrfly.jpeg" alt="butterfly">
                 </div>
                 <ul class="menu">
                     <li><a href="index.html">HOME PAGE</a></li>
@@ -43,11 +32,39 @@
     <div id="banner">
         <img src="images/coffeeshop.jpg" alt="banner" width="1366" height="800">
     </div>
-<!--
+    <!--
     <footer>
         <p>Gulsahbb ~ <cite>all rights reserved.</cite></p>
     </footer>
 -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Menu</h4>
+                    <ul>
+                        <li><a href="index.html">Home Page</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="specials.html">Specials</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Help</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Get Started</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow Us</h4>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
