--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
+
+                <div><p>Lorem ipsun Lorem ipsun Lorem ipsun Lorem ipsun Lorem ipsun</p></div>
                 <div class="footer-col">
                     <h4>Help</h4>
                     <ul>
